@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.3274 2020/11/02 12:25:56 nia Exp $
+# $NetBSD: Makefile,v 1.3275 2020/11/07 15:46:14 wiz Exp $
 #
 
 COMMENT=	Development utilities
@@ -2316,7 +2316,6 @@ SUBDIR+=	py-hg-fastimport
 SUBDIR+=	py-hg-git
 SUBDIR+=	py-hglib
 SUBDIR+=	py-hglist
-SUBDIR+=	py-hgnested
 SUBDIR+=	py-hgtools
 SUBDIR+=	py-hyperscan
 SUBDIR+=	py-hypothesis
